package com.nashss.se.fivelifts.enums;

/**
 * Enum for the two different workout types.
 */
public enum WorkoutType {
    WORKOUT_A,
    WORKOUT_B
}
